// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventAvailabilityProgressbar when availability: 1, currentUser: {"canBook":true} 1`] = `
<div
  className="progress event-progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-danger"
    role="progressbar"
    style={
      Object {
        "width": "99%",
      }
    }
  >
    <span
      className="sr-only"
    >
      99%
    </span>
  </div>
</div>
`;

exports[`EventAvailabilityProgressbar when availability: 26, currentUser: {"canBook":true} 1`] = `
<div
  className="progress event-progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "74%",
      }
    }
  >
    <span
      className="sr-only"
    >
      74%
    </span>
  </div>
</div>
`;

exports[`EventAvailabilityProgressbar when availability: 51, currentUser: {"canBook":true} 1`] = `
<div
  className="progress event-progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-info"
    role="progressbar"
    style={
      Object {
        "width": "49%",
      }
    }
  >
    <span
      className="sr-only"
    >
      49%
    </span>
  </div>
</div>
`;

exports[`EventAvailabilityProgressbar when availability: 76, currentUser: {"canBook":true} 1`] = `
<div
  className="progress event-progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "24%",
      }
    }
  >
    <span
      className="sr-only"
    >
      24%
    </span>
  </div>
</div>
`;

exports[`EventAvailabilityProgressbar when availability: 100, currentUser: {"canBook":false} 1`] = `
<div
  className="progress event-progress"
/>
`;

exports[`EventAvailabilityProgressbar when availability: 100, currentUser: undefined 1`] = `
<div
  className="progress event-progress"
/>
`;
